@@ -40,8 +40,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 	struct variable_list *vars;
 	int status;
 
-	unsigned char *ip;
-	char 	*p;
+	char 	*p,*c;
 	double dbl;
 
 	char error[MAX_STRING_LEN];
@@ -370,18 +369,29 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 				}
 				else
 				{
-					p = malloc(16);
+					zabbix_log( LOG_LEVEL_DEBUG, "ASN_OCTET_STR len[%d]", vars->val_len);
+					p = malloc(1024);
 					if(p)
 					{
-						ip = vars->val.string;
-						zbx_snprintf(p,16,"%d.%d.%d.%d",ip[0],ip[1],ip[2],ip[3]);
-
-						SET_STR_RESULT(value, p);
+						memset(p,0,1024);
+						snprint_value(p, 1023, vars->name, vars->name_length, vars);
+						/* Skip STRING: and STRING_HEX: */
+						c=strchr(p,':');
+						if(c==NULL)
+						{
+							SET_STR_RESULT(value, strdup(p));
+						}
+						else
+						{
+							SET_STR_RESULT(value, strdup(c+1));
+						}
+						zabbix_log( LOG_LEVEL_DEBUG, "ASN_OCTET_STR [%s]", p);
+						free(p);
 					}
 					else
 					{
-						zbx_snprintf(error,sizeof(error),"Cannot allocate required memory");
-						zabbix_log( LOG_LEVEL_ERR, error);
+						zbx_snprintf(error,MAX_STRING_LEN-1,"Cannot allocate required memory");
+						zabbix_log( LOG_LEVEL_ERR, "%s", error);
 						SET_MSG_RESULT(value, strdup(error));
 					}
 				}
