@@ -12,6 +12,7 @@ Changes for 1.3:
 
 Integrated from 1.1.x
 
+ - fixed processing of SNMP HEX and OCTET string values (Alexei)
  - added Dutch tranlation (Alexei)
  - fixed reversed icons on maps (Eugene)
  - fixed trigger description substitution in action comporation (Eugene) 
